# clog

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
cmake/: clogConfig.cmake.in
example/: test-log.c  test-log.h
src/: CMakeLists.txt  clog.c  clog.h
src/file-tools/: CMakeLists.txt  file-utils.c  file-utils.h
src/logging/: CMakeLists.txt  logger.c  logger.h
src/misc/: error-types.h  logger_context.h
